--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Generator</title>
     <link rel="stylesheet" href="./assets/icofont/icofont.min.css">
     <link rel="stylesheet" href="./switch.css">
     <link rel="stylesheet" href="./style.css">
